fix gap in Cards

--- a/src/components/Main/Travels/style.module.scss
+++ b/src/components/Main/Travels/style.module.scss
@@ -49,7 +49,7 @@
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: center;
-  gap: 150px;
+  gap: 80px;
   box-sizing: border-box;
 }
 
